@@ -1,3 +1,7 @@
+2005-12-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/dialogs.py: Add dialogs, stolen and extended from gazpacho.
+
 2005-12-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/test/common.py:
